# i18n-demos

./: Makefile  README.md  demo (apm).md  demo (gRPC i18n).md  demo (i18n).md  docker-compose.yml  eak.yml  i18n.yml
django/: Dockerfile  Makefile  demo (celery i18n).md  demo (simple).md  manage.py  pyproject.toml
django/django_i18n/: asgi.py  celery.py  constants.py  middlewares.py  settings.py  task.py  urls.py  views.py  wsgi.py
django/grpccli/: interceptor.py  service.py
django/grpccli/proto/: gin.proto
django/locale/en_us/LC_MESSAGES/: django.po
django/locale/zh_hans/LC_MESSAGES/: django.po
gin/: Dockerfile  Makefile  context.go  demo (simple i18n).md  demo (simple).md  go.mod  go.sum  interceptor.go  main.go  tzmiddleware.go
gin/grpc/: gin.pb.go
gin/i18n/: context.go  i18n.go  locale.go  middleware.go
gin/i18n/translation/: active.en-US.toml  active.zh-Hans.toml  active.zh.toml
